# palettepal

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
crates/domain/color/: Cargo.toml
crates/domain/color/src/: contrast.rs
crates/website/: Cargo.toml  index.html  index_debug.html
crates/website/src/: lib.rs
crates/website/src/mixins/: click_outside_collapse.rs  mod.rs  observe_size.rs  panel.rs
crates/website/src/model/: mod.rs  palette.rs  palette_color.rs  sampling.rs  sampling_curve.rs
crates/website/src/views/: color_panel.rs  curve_editor.rs  main_view.rs  mod.rs  palette_controls.rs  palette_overview.rs  svg_icons.rs  webgl_test.rs
crates/website/src/views/examples/: dwui.rs  mod.rs
crates/website/src/views/geometry/: gl_utils.rs  mod.rs  shader_program.rs
crates/website/src/views/geometry/color_cake/: brick_geometry.rs  color_cake_renderer.rs  cylinder_geometry.rs  fragment.glsl  mod.rs  transform.rs
crates/website/src/views/geometry/color_cake/shaders/: cake_fragment.glsl  cake_vertex.glsl  line_fragment.glsl  line_vertex.glsl
crates/website/src/views/geometry/color_plane/: fragment.glsl  mod.rs  vertex.glsl
crates/website/src/views/shaders/: fragment.glsl  vertex.glsl
crates/website/src/views/tools/: color_import.rs  curve_editor.rs  mod.rs  palette_overview.rs  pixel_art_tool.rs  wcag_contrast_tool.rs
crates/website/src/views/tools/examples/: color_inputs.rs  dwui.rs  mod.rs
crates/website/src/widgets/: menu_overlay.rs  mod.rs  shader_canvas.rs
