[workspace]

resolver = "2"

members = ["crates/website"]

[workspace.dependencies]
anyhow = "1.0.86"
dominator = "0.5.36"
dominator-css-bindgen = { git = "https://github.com/JedimEmO/dwind.git", rev = "715f14b6c9b2b39a14632d84201edffa379b80f6" }
dwind = { git = "https://github.com/JedimEmO/dwind.git", rev = "715f14b6c9b2b39a14632d84201edffa379b80f6" }
dwind-build = { git = "https://github.com/JedimEmO/dwind.git", rev = "715f14b6c9b2b39a14632d84201edffa379b80f6" }
dwui = { git = "https://github.com/JedimEmO/dwind.git", rev = "715f14b6c9b2b39a14632d84201edffa379b80f6" }
dwind-macros = { git = "https://github.com/JedimEmO/dwind.git", rev = "715f14b6c9b2b39a14632d84201edffa379b80f6" }
futures = "0.3.30"
futures-signals = "0.3.34"
glam = { version = "0.29.2" }
js-sys = "0.3.70"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
web-sys = { version = "0.3.70", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Storage", "Clipboard", "File", "FileReader", "HtmlAnchorElement", "WebGl2RenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlVertexArrayObject", "WebGlUniformLocation", "ImageData"] }
wasm-bindgen = { version = "0.2.95" }
wasm-bindgen-futures = "0.4.43"
wasm-log = "0.3.1"