[workspace]

resolver = "2"

members = ["crates/website"]

[workspace.dependencies]
anyhow = "1.0.86"
colors-transform = "0.2.11"
dominator = "0.5.36"
dominator-css-bindgen = { git = "https://github.com/JedimEmO/dwind.git", rev = "8484de9b3bda70e8fd434d45efca509afd1dc38b" }
dwind = { git = "https://github.com/JedimEmO/dwind.git", rev = "8484de9b3bda70e8fd434d45efca509afd1dc38b" }
dwind-build = { git = "https://github.com/JedimEmO/dwind.git", rev = "8484de9b3bda70e8fd434d45efca509afd1dc38b" }
dwui = { git = "https://github.com/JedimEmO/dwind.git", rev = "8484de9b3bda70e8fd434d45efca509afd1dc38b" }
dwind-macros = { git = "https://github.com/JedimEmO/dwind.git", rev = "8484de9b3bda70e8fd434d45efca509afd1dc38b" }
futures = "0.3.30"
futures-signals = "0.3.34"
glam = { version = "0.29.2", features = ["serde"] }
js-sys = "0.3.70"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3.70", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Storage",
    "Clipboard",
    "File",
    "FileReader",
    "HtmlAnchorElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "ImageData",
    "ResizeObserver",
    "ResizeObserverEntry"
] }
wasm-bindgen = { version = "0.2.95" }
wasm-bindgen-futures = "0.4.43"
wasm-log = "0.3.1"