[workspace]

resolver = "2"

members = [ "crates/domain/color","crates/website"]

[workspace.dependencies]
anyhow = "1.0.86"
colors-transform = "0.2.11"
dominator = "0.5.36"
dominator-css-bindgen = "0.1"
dwind = "0.3"
dwind-build = "0.1"
dwui = "0.3"
dwind-macros = "0.2.0"
futures = "0.3.30"
futures-signals = "0.3.34"
glam = { version = "0.29.2", features = ["serde"] }
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.70"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3.70", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Storage",
    "Clipboard",
    "File",
    "FileReader",
    "HtmlAnchorElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "ImageData",
    "ResizeObserver",
    "ResizeObserverEntry"
] }
wasm-bindgen = { version = "0.2.95" }
wasm-bindgen-futures = "0.4.43"
wasm-log = "0.3.1"
