[package]
name = "palettepal"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]

anyhow.workspace = true
dominator.workspace = true
dwind.workspace = true
dwind-build.workspace = true
dwui.workspace = true
dwind-macros.workspace = true
futures-signals.workspace = true
futures-signals-component-macro = { version = "0.3.0", features = ["dominator"] }
glam.workspace = true
gloo-file.workspace = true
gloo-timers.workspace = true
hex_color = "3.0.0"
hsv = "0.1.1"
hsl = "0.1.1"
jascpal = "0.1.1"
js-sys.workspace = true
once_cell = "1.20.2"
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-log.workspace = true
web-sys.workspace = true
log.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
url = "2.5.3"
uuid.workspace = true
